# Physician_Notetaker

./: README.md  app.py  pyproject.toml  requirements.txt  utils.py  vercel.json
agents/: combiner.py  medical_summarizer.py  sentiment_analyzer.py  soap_generator.py
static/: script.js  style.css
templates/: index.html
